修改了创建用户的时候添加用户，不使用登录名称
